Added a bit of css and links to groups

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 Little web application to upload and share files.
 
-Just to play a bit with ramaze, haml/sass and smoke.
+Just to play a bit with ramaze, haml/sass and stone.
 
